			Java Electric change log

************************* Version 8.00: Released  *************************

IMP: (6/4/04, SMR) Outline listener uses right button to create points, not "a".

IMP: (6/4/04, SMR) Implemented Measure-Distance mode.

IMP: (6/4/04, SMR) Implemented Edit / Selection / "Enclosed Objects"

IMP: (6/4/04, SMR) Implemented Edit / Info / "See All Parameters on Node", "Hide All Parameters on Node", "Default Parameter Visibility"

IMP: (6/4/04, SMR) Implemented readable dump output.

BUG: (6/04/04, GVG) If empty lines are inserted as vars, null and outbound exceptions are thrown om Poly.java and
     GetInfoText.java respectively.
FIX: Skip access if object array[i] is null.

IMP: (6/3/04, SMR) Searching objects in a cell is now an Iterator.

IMP: (6/3/04, SMR) Implemented "Show Power and Ground"

IMP: (6/3/04, SMR) Implemented "Validate Power and Ground"

IMP: (6/3/04, SMR) Can use "++" and "--" to tell where to increment or decrement array indices.

IMP: (6/2/04, GVG) First version of layer coverage.

IMP: (6/1/04, GVG) Open and Save functions in tool bar. Extra functions to verify if Save icon is enabled or disable.

IMP: (6/2/04, SMR) Implemented Annular ring.

IMP: (6/2/04, SMR) "Array" dialog gives a choice of going by row or by column

IMP: (6/2/04, SMR) Implemented ERC antenna check

IMP: (6/2/04, SMR) Implemented Edit / Move / "Align to Grid"

IMP: (6/1/04, SMR) Implemented Edit / Text / "Change Text Size..."

IMP: (6/1/04, SMR) Implemented Edit / Selection / "Deselect All Arcs".

IMP: (6/1/04, SMR) Implemented Edit / Selection / "Select Object..." which can select nodes, arcs, exports, or networks.

IMP: (5/31/04, SMR) Implemented cell instance extraction and packaging.

IMP: (5/31/04, SMR) Implemented MOSIS CMOS scalable transistors.

IMP: (5/30/04, SMR) Implemented Tool / Network / "Show Network", "List Networks", "List Connections on Network",
     "List Exports on Network", and "List Exports below Network".
